2009-12-20  Frank Lanitz  <frank(at)frank(dot)uvena(dot)de>

 * src/editor.c:
   Extend auto_latex() function to check whether an environment has been
   closed within the next lines to avoid auto adding double \end{}.


2009-12-19  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>

 * src/callbacks.c, src/dialogs.c, src/document.c, src/document.h:
   Add document_need_save_as().
   Show the Save As also for documents created from filetype templates
   instead of saving them directly with the untitled filename.


2009-12-09  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>

 * geany.glade, src/interface.c:
   Move 'Send Selection to Terminal' menu item from Format to Commands
   submenu.
 * src/msgwindow.c:
   When going to a build error, try the current document's path if
   the parsed filename doesn't exist. (This can happen when we receive
   build messages in the wrong order - after the 'Leaving directory'
   messages).
 * src/msgwindow.c:
   Refactor msgwin_goto_compiler_file_line().
 * src/interface.c, src/keybindings.c, geany.glade:
   Capitalize, add mnemonics, sync with kb.c the Edit->Commands menu item
   labels.
 * src/search.c:
   Refactor/reformat on_replace_dialog_response().


2009-12-08  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>

 * geany.spec.in:
   Improve geany.spec (split the package into a binary and devel
   package, update BuildRequires and other minor improvements).
   Patch by Dominic Hopf, thanks.


2009-12-08  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>

 * src/filetypes.c, src/filetypes.h:
   Make group for custom filetypes.
 * data/filetypes.Genie.conf, data/filetype_extensions.conf:
   Add custom filetype Genie.


2009-12-07  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>

 * src/highlighting.c:
   Highlight D & Java types from a global tags file.
 * src/highlighting.c, doc/geany.txt, doc/geany.html:
   Add debug message warning if recursive lexer_filetype is set.