@@ -1,3 +1,13 @@
+2009-12-20  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>
+
+ * src/dialog.c, src/dialogs.h, src/document.c, src/prefs.c:
+   Make dialogs_show_prompt() more flexible to take up to three
+   button/response code pairs to be shown.
+   Add a close button to the dialog when asking to Re-Save a
+   deleted file
+   (closes #2916954, based on a patch by Dominik Stadler, thanks).
+
+
 2009-12-20  Frank Lanitz  <frank(at)frank(dot)uvena(dot)de>
 
  * src/editor.c:
